# ais-noaa-fetch

./: AGENTS.md  README.md  pyproject.toml
src/ais_noaa_fetch/: __init__.py  cli.py  convert.py  fetch.py
tests/: test_convert.py
