[project]
name = "ais-noaa-fetch"
version = "0.1.0"
description = "Download AIS vessel tracking data from NOAA and convert to Parquet"
readme = "README.md"
authors = [
    { name = "James Thompson", email = "james@jamtho.com" }
]
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "h3>=4.4.2",
    "numpy>=2.2.6",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "tzdata>=2025.2",
    "zstandard>=0.25.0",
]

[project.scripts]
ais-noaa-fetch = "ais_noaa_fetch.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
